- 
    
Bug
 - 
    Resolution: Done
 - 
    
P1: Critical
 - 
    6.4.0 Beta1
 
- 
        e4f4e7341f (qt/qtdeclarative/dev) 2159550867 (qt/qtdeclarative/6.4) 2159550867 (qt/tqtc-qtdeclarative/6.4) e4f4e7341f (qt/tqtc-qtdeclarative/dev)
 
The attached example crashes. If the required property line in TimeMarks.qml is added, it doesn't.
- is blocked by
 - 
                    
QTBUG-98769 QML StackView heap-use-after-free on pop()
-         
 - Closed
 
 -         
 - 
                    
QTBUG-104923 Heap use after free in QQuickStackView
-         
 - Closed
 
 -         
 
| For Gerrit Dashboard: QTBUG-104884 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 421360,9 | QmlModels: Fix context and extra object handling | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 | 
| 421374,9 | TableView: Add a test for TableView with bound delegate components | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 | 
| 423151,2 | QmlModels: Fix context and extra object handling | 6.4 | qt/qtdeclarative | Status: MERGED | +2 | 0 | 
| 423155,2 | TableView: Add a test for TableView with bound delegate components | 6.4 | qt/qtdeclarative | Status: MERGED | +2 | 0 |