QmlModels: Fix context and extra object handling

If we have a bound context, we still need to record the information that
the object's context belongs to a delegate. For this purpose we have
the extra object. Even when we create the object in the component's
creation context, the object creator still produces a private internal
context for each object. We unconditionally attach the extra object to
that one, and check the whole context hierarchy for extra objects.

As we now record the creation context for model items incubated from
bound components, we need to make sure not to (re)set its context object
and not to forcibly invalidate it. We have QQmlRefPointer::reset() for
that anyway.

As a drive-by we also assert that the object ref count doesn't overflow,
as that has happened during testing.

Fixes: QTBUG-104884
Change-Id: I836916c63656124a0f9d7b04902debba59b9f3a3
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit e4f4e7341f5fbfbb246c7fc4ee99fed5cce42fca)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>