tests/auto/qml/qqmldelegatemodel/data/Model.qml
@@ -1,0 +1,6 @@
+import QtQml
+
+QtObject {
+    property int rowCount: 1
+    signal expandedRowHeightChanged()
+}
